--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Farönk térfogat számító</title>
 </head>
 <body>
     <section>
@@ -28,7 +28,7 @@
                    <input type="number" min="0" id="atmero" placeholder="cm">
               </div>
               <div class="div3 div">
-                  <h2>Hosszuság</h2> 
+                  <h2>Hosszúság</h2> 
                   <input type="number" min="0" id="hosz" placeholder="m">
                    <h2>Mennyiség (db)</h2> 
                   <input type="number"  min="0" id="menyiseg" placeholder="1">
